--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -73,30 +73,27 @@ jobs:
                   POSTMAN_COLLECTION_ID: "${{ matrix.collections.collection_id }}"
               run: |
 
-                  # Convert and update with error checking
-                  RESPONSE=$(curl -s -w "%{http_code}" -X PUT \
-                    -H "X-Api-Key: $POSTMAN_API_KEY" \
-                    -H "Content-Type: application/json" \
-                    -d @${{ matrix.collections.chain }}/${{ matrix.collections.service }}/${{matrix.collections.filename}} \
-                    "https://api.getpostman.com/collections/$POSTMAN_COLLECTION_ID")
-
-                  STATUS_CODE=$(echo "$RESPONSE" | tail -n1)
-                    if [ "$STATUS_CODE" -ne 200 ]; then
-                    echo "Failed to update collection. Status code: $STATUS_CODE"
-                    exit 1
-                    fi
-
-                  # Convert OpenAPI to Postman collection format
-                  curl -X POST \
-                      -H "X-Api-Key: $POSTMAN_API_KEY" \
-                      -H "Content-Type: application/json" \
-                      -d @${{ matrix.collections.chain }}/${{ matrix.collections.service }}/${{matrix.collections.filename}} \
-                      "https://api.getpostman.com/collections/$POSTMAN_COLLECTION_ID?format=json" \
-                      > collection.json
+                  # Convert OpenAPI to Postman Collection format
+                  openapi2postmanv2 -s ${{ matrix.collections.chain }}/${{ matrix.collections.service }}/${{matrix.collections.filename}} -o collection.json
+                                    
+                  # Wrap the collection in the required format
+                  echo '{"collection":' > temp.json
+                  cat collection.json >> temp.json
+                  echo '}' >> temp.json
 
                   # Update the existing collection
                   curl -X PUT \
                       -H "X-Api-Key: $POSTMAN_API_KEY" \
                       -H "Content-Type: application/json" \
-                      -d @collection.json \
+                      -d @temp.json \
                       "https://api.getpostman.com/collections/$POSTMAN_COLLECTION_ID"
+                      -o response.json
+
+                  # Check response
+                  if [ $(cat response.json | grep -c "error") -gt 0 ]; then
+                    echo "Error updating collection:"
+                    cat response.json
+                    exit 1
+                  else
+                    echo "Successfully updated collection"
+                  fi
