--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -87,7 +87,7 @@ jobs:
 
                   # Update the existing collection
                   curl -X PUT \
-                      -H "X-Api-Key: ${{ secrets.POSTMAN_API_KEY }}" \
+                      -H "x-api-key: $POSTMAN_API_KEY" \
                       -H "Content-Type: application/json" \
                       -d @temp.json \
                       "https://api.getpostman.com/collections/$POSTMAN_COLLECTION_ID"
