--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -78,7 +78,7 @@ jobs:
               run: |
 
                   # Convert OpenAPI to Postman Collection format
-                  openapi2postmanv2 -s ${{ matrix.collections.chain }}/${{ matrix.collections.service }}/${{matrix.collections.filename}} -o collection.json
+                  openapi2postmanv2 -s ${{ matrix.collections.chain }}/${{ matrix.collections.service }}/${{matrix.collections.filename}} -o collection.json folderStrategy=Tags
                                     
                   # Wrap the collection in the required format
                   echo '{"collection":' > temp.json
