--- a/.github/workflows/postman-prod.yml
+++ b/.github/workflows/postman-prod.yml
@@ -37,6 +37,10 @@ jobs:
                       service: "node-rpc-api"
                       filename: "openapi.json"
                       collection_id: "25680306-ec0dc9e4-d4f1-4ef6-b5db-aeaae88bc49e" # Bitcoin - Node RPC API
+                    - chain: "bitcoin"
+                      service: "wallet-api"
+                      filename: "openapi.json"
+                      collection_id: "43394706-258357ce-b3ae-4d3e-81f1-63a39502381e" # Bitcoin - Wallet API
                     - chain: "cardano"
                       service: "blockchain-indexer-api"
                       filename: "openapi.json"
