feat: merged specs

--- a/bitcoin/merged/merge-config.yaml
+++ b/bitcoin/merged/merge-config.yaml
@@ -9,5 +9,5 @@
                 "pathModification": { "prepend": "/rpc" },
             },
         ],
-    "output": "./openapi-unified.json",
+    "output": "./openapi-merged.json",
 }
