--- a/bitcoin/merged/merge-config.json
+++ b/bitcoin/merged/merge-config.json
@@ -1,8 +1,17 @@
 {
     "inputs": [
-        { "inputFile": "../blockchain-indexer-api/openapi.json" },
-        { "inputFile": "../mempool-monitoring-api/openapi.json" },
-        { "inputFile": "../wallet-api/openapi.json" },
+        {
+            "inputFile": "header.json"
+        },
+        {
+            "inputFile": "../blockchain-indexer-api/openapi.json"
+        },
+        {
+            "inputFile": "../mempool-monitoring-api/openapi.json"
+        },
+        {
+            "inputFile": "../wallet-api/openapi.json"
+        },
         {
             "inputFile": "../node-rpc-api/openapi.json",
             "pathModification": { "prepend": "/rpc" }
